--- a/hello-bazel-debug-vs/.vscode/launch.json
+++ b/hello-bazel-debug-vs/.vscode/launch.json
@@ -10,15 +10,7 @@
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "build",
             "sourceMap": {
-                ".": "${workspaceFolder}",
-                "/private/var/tmp/_bazel_": "${workspaceFolder}"
-            },
-            "postRunCommands": [
-                "settings set target.source-map /proc/self/cwd/ ${workspaceFolder}"
-            ],
-            "env": {
-                "LLDB_DEBUGSERVER_LOG": "1",
-                "LLDB_DEBUGSERVER_LOG_FILE": "/tmp/lldb-debugserver.log"
+                ".": "${workspaceFolder}"
             }
         }
     ]
