"Update Bazel debug configuration to use cppdbg instead of lldb, enhance VSCode settings with comprehensive file associations, and add nemiver debugger reference in README"

--- a/hello-bazel-debug-vs/.vscode/launch.json
+++ b/hello-bazel-debug-vs/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
         {
             "name": "Debug C++ (Bazel)",
-            "type": "lldb",
+             "type": "cppdbg",//"lldb",
             "request": "launch",
             "program": "${workspaceFolder}/build/bin/hello_debug",
             "args": [],
